Add code and results with tissue info

--- a/analyses/data-exploratory-analysis/plots/Report-data-exploratory-analysis-2025-01-03.html
+++ b/analyses/data-exploratory-analysis/plots/Report-data-exploratory-analysis-2025-01-03.html
@@ -2856,7 +2856,7 @@ sc-/sn-ATAC-Seq Analysis in 10X Genomics data</p>
 </blockquote>
 <p>Date started: Dec-16-2024<br />
 Date completed: ONGOING<br />
-Report generated: 18:27:45 CST 01/03/2025<br />
+Report generated: 18:44:38 CST 01/03/2025<br />
 </p>
 <p>Reviewed by: _____________________ Date: ____________<br />
 </p>
@@ -3083,248 +3083,274 @@ condition</caption>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
-<div id="number-of-samples-per-experiment-seq_unit-assay-condition-and-sample" class="section level2" number="7.4">
+<div id="number-of-samples-per-experiment-tissue-seq_unit-assay-condition-and-sample" class="section level2" number="7.4">
 <h2><span class="header-section-number">7.4</span> Number of samples per
-experiment, seq_unit, assay, condition, and sample</h2>
+experiment, tissue, seq_unit, assay, condition, and sample</h2>
 <div style="font-size:80%">
 <table>
-<caption>Summary of samples per experiment, seq_unit, assay,
+<caption>Summary of samples per experiment, tissue, seq_unit, assay,
 seq_technology, condition, and Sample</caption>
 <colgroup>
-<col width="20%" />
-<col width="11%" />
-<col width="8%" />
 <col width="18%" />
-<col width="17%" />
-<col width="20%" />
+<col width="12%" />
+<col width="10%" />
+<col width="7%" />
+<col width="16%" />
+<col width="14%" />
+<col width="19%" />
 <col width="3%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th align="left">experiment</th>
+<th align="center">tissue</th>
 <th align="center">seq_unit</th>
 <th align="center">assay</th>
 <th align="center">seq_technology</th>
-<th align="center">condition</th>
-<th align="left">Sample</th>
+<th align="left">condition</th>
+<th align="center">Sample</th>
 <th align="center">n</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">age</td>
-<td align="left">6 week cerebellum</td>
+<td align="left">age</td>
+<td align="center">6 week cerebellum</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">age</td>
-<td align="left">P0 cerebellum</td>
+<td align="left">age</td>
+<td align="center">P0 cerebellum</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">sorted</td>
-<td align="left">ATOH HI</td>
+<td align="left">sorted</td>
+<td align="center">ATOH HI</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">sorted</td>
-<td align="left">ATOH Low</td>
+<td align="left">sorted</td>
+<td align="center">ATOH Low</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">age</td>
-<td align="left">6 week cerebellum</td>
+<td align="left">age</td>
+<td align="center">6 week cerebellum</td>
 <td align="center">2</td>
 </tr>
 <tr class="even">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">age</td>
-<td align="left">P0 cerebellum</td>
+<td align="left">age</td>
+<td align="center">P0 cerebellum</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">sorted</td>
-<td align="left">ATOH HI</td>
+<td align="left">sorted</td>
+<td align="center">ATOH HI</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Cerebellum</td>
+<td align="center">Cerebellum</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">sorted</td>
-<td align="left">ATOH Low</td>
+<td align="left">sorted</td>
+<td align="center">ATOH Low</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">More Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">age</td>
-<td align="left">E14.5 Retina</td>
+<td align="left">age</td>
+<td align="center">E14.5 Retina</td>
 <td align="center">2</td>
 </tr>
 <tr class="even">
 <td align="left">More Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">none</td>
-<td align="left">Retina</td>
+<td align="left">none</td>
+<td align="center">Retina</td>
 <td align="center">2</td>
 </tr>
 <tr class="odd">
 <td align="left">More Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">sorted</td>
-<td align="left">NRL Dep</td>
+<td align="left">sorted</td>
+<td align="center">NRL Dep</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">More Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">age</td>
-<td align="left">E14.5</td>
+<td align="left">age</td>
+<td align="center">E14.5</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">More Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">sorted</td>
-<td align="left">NRL Dep</td>
+<td align="left">sorted</td>
+<td align="center">NRL Dep</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Stressed Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">LPS Injection</td>
-<td align="left">LPS</td>
+<td align="left">LPS Injection</td>
+<td align="center">LPS</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Stressed Retina</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">PBS Injection</td>
-<td align="left">PBS</td>
+<td align="left">PBS Injection</td>
+<td align="center">PBS</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Stressed Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">LPS Injection</td>
-<td align="left">LPS_ATAC</td>
+<td align="left">LPS Injection</td>
+<td align="center">LPS_ATAC</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">knock-out</td>
-<td align="left">SEKO_21</td>
+<td align="left">knock-out</td>
+<td align="center">SEKO_21</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">knock-out</td>
-<td align="left">SEKO_25</td>
+<td align="left">knock-out</td>
+<td align="center">SEKO_25</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">wt</td>
-<td align="left">Wt1</td>
+<td align="left">wt</td>
+<td align="center">Wt1</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">cell</td>
 <td align="center">RNA</td>
 <td align="center">10Xv3</td>
-<td align="center">wt</td>
-<td align="left">Wt2</td>
+<td align="left">wt</td>
+<td align="center">Wt2</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">knock-out</td>
-<td align="left">SEKO_21</td>
+<td align="left">knock-out</td>
+<td align="center">SEKO_21</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">knock-out</td>
-<td align="left">SEKO_25</td>
+<td align="left">knock-out</td>
+<td align="center">SEKO_25</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">wt</td>
-<td align="left">Wt1</td>
+<td align="left">wt</td>
+<td align="center">Wt1</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Victoria Knockout</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10Xv2</td>
-<td align="center">wt</td>
-<td align="left">Wt2</td>
+<td align="left">wt</td>
+<td align="center">Wt2</td>
 <td align="center">1</td>
 </tr>
 </tbody>
@@ -3404,86 +3430,95 @@ condition</caption>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
-<div id="number-of-samples-per-experiment-seq_unit-assay-seq_technology-condition-and-sample" class="section level2" number="8.4">
+<div id="number-of-samples-per-experiment-tissue-seq_unit-assay-seq_technology-condition-and-sample" class="section level2" number="8.4">
 <h2><span class="header-section-number">8.4</span> Number of samples per
-experiment, seq_unit, assay, seq_technology, condition, and sample</h2>
+experiment, tissue, seq_unit, assay, seq_technology, condition, and
+sample</h2>
 <div style="font-size:80%">
-<table style="width:100%;">
-<caption>Summary of samples per experiment, seq_unit, assay,
+<table>
+<caption>Summary of samples per experiment, tissue, seq_unit, assay,
 seq_technology, condition, and Sample</caption>
 <colgroup>
-<col width="21%" />
-<col width="13%" />
+<col width="19%" />
 <col width="9%" />
-<col width="21%" />
-<col width="14%" />
-<col width="17%" />
+<col width="11%" />
+<col width="8%" />
+<col width="19%" />
+<col width="11%" />
+<col width="16%" />
 <col width="3%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th align="left">experiment</th>
+<th align="center">tissue</th>
 <th align="center">seq_unit</th>
 <th align="center">assay</th>
 <th align="center">seq_technology</th>
-<th align="center">condition</th>
-<th align="left">Sample</th>
+<th align="left">condition</th>
+<th align="center">Sample</th>
 <th align="center">n</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">Multiome Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10X</td>
-<td align="center">age</td>
-<td align="left">Adult Retina</td>
+<td align="left">age</td>
+<td align="center">Adult Retina</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Multiome Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10X</td>
-<td align="center">age</td>
-<td align="left">E14.5 Retina</td>
+<td align="left">age</td>
+<td align="center">E14.5 Retina</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Multiome Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">ATAC</td>
 <td align="center">10X</td>
-<td align="center">age</td>
-<td align="left">P0 Retina</td>
+<td align="left">age</td>
+<td align="center">P0 Retina</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Multiome Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">RNA</td>
 <td align="center">10X</td>
-<td align="center">age</td>
-<td align="left">Adult Retina</td>
+<td align="left">age</td>
+<td align="center">Adult Retina</td>
 <td align="center">1</td>
 </tr>
 <tr class="odd">
 <td align="left">Multiome Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">RNA</td>
 <td align="center">10X</td>
-<td align="center">age</td>
-<td align="left">E14.5 Retina</td>
+<td align="left">age</td>
+<td align="center">E14.5 Retina</td>
 <td align="center">1</td>
 </tr>
 <tr class="even">
 <td align="left">Multiome Retina</td>
+<td align="center">Retina</td>
 <td align="center">nucleus</td>
 <td align="center">RNA</td>
 <td align="center">10X</td>
-<td align="center">age</td>
-<td align="left">P0 Retina</td>
+<td align="left">age</td>
+<td align="center">P0 Retina</td>
 <td align="center">1</td>
 </tr>
 </tbody>
