Add center option for tables1

--- a/analyses/data-exploratory-analysis/plots/Report-data-exploratory-analysis-2025-01-09.html
+++ b/analyses/data-exploratory-analysis/plots/Report-data-exploratory-analysis-2025-01-09.html
@@ -2965,7 +2965,7 @@ sc-/sn-ATAC-Seq Analysis in 10X Genomics data</p>
 </blockquote>
 <p>Date started: Dec-16-2024<br />
 Date completed: ONGOING<br />
-Report generated: 14:37:03 CST 01/09/2025<br />
+Report generated: 14:43:07 CST 01/09/2025<br />
 </p>
 <p>Reviewed by: _____________________ Date: ____________<br />
 </p>
@@ -3132,7 +3132,7 @@ database. Cohort is formed and processed accordingly.</p>
 <div id="number-of-samples-per-experiment" class="section level2" number="7.2">
 <h2><span class="header-section-number">7.2</span> Number of samples per
 experiment</h2>
-<div style="font-size:80%">
+<div align="center" style="font-size:80%">
 <table>
 <caption>Summary of samples per experiment</caption>
 <thead>
@@ -3164,7 +3164,7 @@ experiment</h2>
 seq_technology_assay</h2>
 <p>Here, we investigate the number of libraries per assay, i.e.,
 <code>seq_technology_assay</code> and per <code>Sample</code>.</p>
-<div style="font-size:80%">
+<div align="center" style="font-size:80%">
 <table>
 <caption>Number of samples per seq_technology_assay</caption>
 <colgroup>
@@ -3367,7 +3367,7 @@ seq_technology_assay</h2>
 <div id="summary-of-samples" class="section level2" number="7.4">
 <h2><span class="header-section-number">7.4</span> Summary of
 samples</h2>
-<div style="font-size:80%">
+<div align="center" style="font-size:80%">
 <table>
 <caption>Summary of samples</caption>
 <colgroup>
@@ -3580,7 +3580,7 @@ Cohort is formed and processed accordingly.</p>
 <div id="number-of-samples-per-experiment-1" class="section level2" number="8.2">
 <h2><span class="header-section-number">8.2</span> Number of samples per
 experiment</h2>
-<div style="font-size:80%">
+<div align="center" style="font-size:80%">
 <table>
 <caption>Summary of samples per experiment</caption>
 <thead>
@@ -3604,7 +3604,7 @@ experiment</h2>
 seq_technology_assay</h2>
 <p>Here, we investigate the number of libraries per assay, i.e.,
 <code>seq_technology_assay</code> and per <code>Sample</code>.</p>
-<div style="font-size:80%">
+<div align="center" style="font-size:80%">
 <table>
 <caption>Number of samples per seq_technology_assay</caption>
 <colgroup>
@@ -3690,7 +3690,7 @@ seq_technology_assay</h2>
 <div id="summary-of-samples-1" class="section level2" number="8.4">
 <h2><span class="header-section-number">8.4</span> Summary of
 samples</h2>
-<div style="font-size:80%">
+<div align="center" style="font-size:80%">
 <table>
 <caption>Summary of samples</caption>
 <colgroup>
